[package]
name = "ocp-zmq-socket-holder"
version = "0.1.0"
authors = ["Alexandr <qwerty541zxc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
lazy_static = "1.4.0"
rand = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1", features = ["full"] }
zeromq = { git = "https://github.com/zeromq/zmq.rs", rev = "511240ec65baa585e06ff9d35b51b6aca0ae0579" }
