[package]
name = "rust-impl"
version = "0.1.0"
authors = ["Alexandr <qwerty541zxc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
env_logger = "0.8.3"
futures = "0.3.13"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.3"
schemafy = "0.5.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.3.0", features = ["full"] }
zeromq = { git = "https://github.com/zeromq/zmq.rs", rev = "c3f4eb5f4420ac06e76b2e3896e1995a80d1f08d", features = ["tokio-runtime"] }
zmq = "0.9.2"
