[package]
name = "rust-impl"
version = "0.1.0"
authors = ["Alexandr <qwerty541zxc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
futures = "0.3.15"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.3"
serde_json = "1.0.64"
zeromq-messages = { path = "../zeromq-messages/" }
zmq = "0.9.2"
uuid = { version = "0.8.2", features = ["v4"] }
