[package]
name = "zeromq-messages-gen"
version = "0.1.0"
description = "Crate that contains procedural macro for generating ZeroMQ messages stuff"
authors = ["Alexandr <qwerty541zxc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
Inflector = "0.11.4"
serde_json = "1.0.64"
syn = "1.0.73"
proc-macro2 = "1.0.27"
regex = "1.5.4"
quote = "1.0.9"

[dev-dependencies]
num_enum = "0.5.1"
