[package]
name = "zeromq-messages"
version = "0.1.0"
authors = ["Alexandr <qwerty541zxc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
thiserror = "1.0.25"
num_enum = "0.5.1"
uuid = "0.8.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
schemafy = "0.5.2"
zeromq-messages-gen = { path = "../zeromq-messages-gen/" }

[dev-dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
zmq = "0.9.2"
